--- a/LearnMenu.ui
+++ b/LearnMenu.ui
@@ -1,38 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ChooseReview</class>
- <widget class="QDialog" name="ChooseReview">
+ <class>LearnMenu</class>
+ <widget class="QFrame" name="LearnMenu">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>350</height>
+    <width>1200</width>
+    <height>675</height>
    </rect>
   </property>
-  <property name="minimumSize">
-   <size>
-    <width>600</width>
-    <height>350</height>
-   </size>
-  </property>
-  <property name="maximumSize">
-   <size>
-    <width>600</width>
-    <height>350</height>
-   </size>
-  </property>
   <property name="windowTitle">
-   <string>测试结束</string>
+   <string>Frame</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(81, 81, 81);</string>
   </property>
-  <widget class="QLabel" name="labelTitle">
+  <widget class="QLabel" name="labelLearnInfo">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>30</y>
+     <x>320</x>
+     <y>160</y>
+     <width>551</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>未选择学习单词库</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonStart">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>290</y>
+     <width>161</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>开始学习！</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelFailed">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>360</y>
+     <width>441</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 30, 30);</string>
+   </property>
+   <property name="text">
+    <string>请选择学习单词库！</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelLearn">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>160</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -40,23 +95,23 @@
    <property name="font">
     <font>
      <family>等线</family>
-     <pointsize>16</pointsize>
+     <pointsize>14</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>测试结束！</string>
+    <string>学习单词库：</string>
    </property>
   </widget>
-  <widget class="QLabel" name="labelRightNum">
+  <widget class="QPushButton" name="pushButtonExit">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>90</y>
-     <width>121</width>
-     <height>31</height>
+     <x>1060</x>
+     <y>635</y>
+     <width>140</width>
+     <height>40</height>
     </rect>
    </property>
    <property name="font">
@@ -66,131 +121,42 @@
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>正确：12</string>
+    <string>返回首页</string>
    </property>
   </widget>
-  <widget class="QLabel" name="labelWrongNum">
+  <widget class="QLabel" name="labelTitle">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>140</y>
-     <width>121</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>错误：18</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelTotalNum">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>240</y>
-     <width>121</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>12</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>总计：52</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelReview">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>281</y>
-     <width>271</width>
+     <x>50</x>
+     <y>40</y>
+     <width>471</width>
      <height>61</height>
     </rect>
    </property>
    <property name="font">
     <font>
      <family>等线</family>
-     <pointsize>12</pointsize>
+     <pointsize>19</pointsize>
     </font>
    </property>
    <property name="styleSheet">
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>是否进入复习模式？</string>
+    <string>自主学习模式-配置页面</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButtonYes">
+  <widget class="QPushButton" name="pushButtonTest">
    <property name="geometry">
     <rect>
-     <x>191</x>
-     <y>295</y>
-     <width>81</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(100, 100, 100);
-color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>是</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButtonNo">
-   <property name="geometry">
-    <rect>
-     <x>290</x>
-     <y>295</y>
-     <width>81</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>等线</family>
-     <pointsize>11</pointsize>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(100, 100, 100);
-color: rgb(255, 255, 255);</string>
-   </property>
-   <property name="text">
-    <string>否</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelMarkNum">
-   <property name="geometry">
-    <rect>
-     <x>30</x>
-     <y>190</y>
+     <x>180</x>
+     <y>160</y>
      <width>121</width>
-     <height>31</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -200,10 +166,11 @@ color: rgb(255, 255, 255);</string>
     </font>
    </property>
    <property name="styleSheet">
-    <string notr="true">color: rgb(255, 255, 255);</string>
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>标记：22</string>
+    <string>选择单词库</string>
    </property>
   </widget>
  </widget>
