--- a/Menu.ui
+++ b/Menu.ui
@@ -42,7 +42,7 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>565</y>
+     <y>560</y>
      <width>191</width>
      <height>61</height>
     </rect>
@@ -65,7 +65,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>145</y>
+     <y>230</y>
      <width>191</width>
      <height>61</height>
     </rect>
@@ -88,7 +88,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>285</y>
+     <y>340</y>
      <width>191</width>
      <height>61</height>
     </rect>
@@ -111,7 +111,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>425</y>
+     <y>450</y>
      <width>191</width>
      <height>61</height>
     </rect>
@@ -128,6 +128,29 @@ color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>中译英拼写练习</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButtonLearn">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>120</y>
+     <width>191</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>16</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>自主学习模式</string>
    </property>
   </widget>
  </widget>
