--- a/SpellReview.ui
+++ b/SpellReview.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>测试结束</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(81, 81, 81);</string>
