--- a/Choose.ui
+++ b/Choose.ui
@@ -288,6 +288,30 @@ color: rgb(255, 255, 255);</string>
     <enum>Qt::AutoText</enum>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButtonHelp">
+   <property name="geometry">
+    <rect>
+     <x>1140</x>
+     <y>0</y>
+     <width>60</width>
+     <height>60</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>微软雅黑</family>
+     <pointsize>30</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>?</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
