--- a/SpellMenu.ui
+++ b/SpellMenu.ui
@@ -20,7 +20,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>160</y>
+     <y>150</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -64,7 +64,7 @@
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>470</y>
+     <y>605</y>
      <width>441</width>
      <height>31</height>
     </rect>
@@ -86,7 +86,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>160</y>
+     <y>150</y>
      <width>121</width>
      <height>41</height>
     </rect>
@@ -109,7 +109,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>160</y>
+     <y>150</y>
      <width>551</width>
      <height>41</height>
     </rect>
@@ -131,7 +131,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>320</x>
-     <y>290</y>
+     <y>420</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -156,7 +156,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>285</y>
+     <y>415</y>
      <width>131</width>
      <height>41</height>
     </rect>
@@ -178,7 +178,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>400</y>
+     <y>535</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -224,7 +224,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>200</x>
-     <y>290</y>
+     <y>420</y>
      <width>111</width>
      <height>31</height>
     </rect>
@@ -252,7 +252,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>550</x>
-     <y>290</y>
+     <y>420</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -280,7 +280,7 @@ color: rgb(255, 255, 255);</string>
    <property name="geometry">
     <rect>
      <x>440</x>
-     <y>290</y>
+     <y>420</y>
      <width>101</width>
      <height>31</height>
     </rect>
@@ -299,6 +299,58 @@ color: rgb(255, 255, 255);</string>
    </property>
    <property name="checked">
     <bool>false</bool>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="comboBoxSource">
+   <property name="geometry">
+    <rect>
+     <x>180</x>
+     <y>280</y>
+     <width>251</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>12</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(100, 100, 100);
+color: rgb(255, 255, 255);</string>
+   </property>
+   <item>
+    <property name="text">
+     <string>有道词典发音接口（需要连网）</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>本地机器语音合成（无需连网）</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QLabel" name="labelSource">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>280</y>
+     <width>121</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>等线</family>
+     <pointsize>14</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
+   <property name="text">
+    <string>单词语音源：</string>
    </property>
   </widget>
  </widget>
